--- a/css/Erreur.css
+++ b/css/Erreur.css
@@ -1,6 +1,6 @@
 *{
     font-family: 'Segoe UI', serif;
-    /*box-shadow: 0 0 3px red;*/
+    box-shadow: 0 0 3px red;
 }
 
 .erreur{
@@ -36,6 +36,89 @@
 .erreur a:hover{
     background: #af0606;
 }
+
+
+
+.countdown_T {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    min-height: 20vh;
+
+}
+
+
+#time {
+    display: flex;
+    gap: 30px;
+}
+#time .circle {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#time .circle svg {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    transform: rotate(270deg);
+}
+#time .circle svg circle {
+    width: 100%;
+    height: 100%;
+    fill: transparent;
+    stroke-linecap: round;
+    stroke-width: 8;
+    stroke: #282828;
+    transform: translate(5px, 5px);
+}
+#time .circle svg circle:nth-child(2) {
+    stroke: var(--clr);
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;
+}
+#time div {
+    position: absolute;
+    text-align: center;
+    color: #000000;
+    font-weight: 300;
+    font-size: 1.5em;
+}
+#time div span {
+    position: absolute;
+    transform: translateX(-50%) translateY(0px);
+    font-size: 0.35em;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+}
+#time .dots {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    z-index: 1000;
+}
+#time .dots::before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    width: 15px;
+    height: 15px;
+    background: var(--clr);
+    border-radius: 50%;
+    box-shadow: 0 0 20px var(--clr),
+    0 0 60px var(--clr);
+}
+
+
+
 
 
 
