--- a/css/Ltouristique.css
+++ b/css/Ltouristique.css
@@ -1,6 +1,7 @@
+/*
 *{
     font-family: 'Segoe UI', sans-serif;
-    /*box-shadow: 0 0 3px red;*/
+    !*box-shadow: 0 0 3px red;*!
 }
 
 .cardtst {
@@ -8,7 +9,7 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 24px;
-    /*max-width: 1200px;*/
+    !*max-width: 1200px;*!
     width: 100%;
 }
 
@@ -26,14 +27,19 @@
 
 @media screen and (max-width: 576px) {
     .cardt{
-        margin-left: 5%;
+!*        margin-left: 5%;
         margin-right: 5%;
+        margin-top: -20px;
+        margin-bottom: -40px;*!
+        margin:-50% 5% -50%;
     }
 }
 
 .cardt {
     position: relative;
     padding-bottom: 150%;
+    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .cardt-background {
@@ -57,25 +63,25 @@
 .cardtst:hover > .cardt:not(:hover) .cardt-background {
     filter: brightness(0.5) saturate(0) contrast(1.2) blur(0.2px);
 }
-/*Position du Texte dans les cards*/
+!*Position du Texte dans les cards*!
 .cardt-content {
     padding: 24px;
     position: absolute;
 }
-/*Titre du texte dans les cards*/
+!*Titre du texte dans les cards*!
 .cardt-content p {
     color: white;
     font-size: .9rem;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
-/*Texte dans les cards*/
+!*Texte dans les cards*!
 .cardt-content h3 {
     color: white;
     font-size: 1.6rem;
     text-shadow: 2px 2px 20px #af0606;
 }
-/*Gros titres*/
+!*Gros titres*!
 .ecriture{
     color: #031f73;
     font-size: 3rem;
@@ -86,4 +92,4 @@
     max-width: 1200px;
     width: 100%;
     text-align: center;
-}
+}*/
