--- a/css/Map.css
+++ b/css/Map.css
@@ -1,11 +1,7 @@
-*{
-    font-family: 'Segoe UI', sans-serif;
-    /*box-shadow: 0 0 3px red;*/
-}
-
+/*
 .mapdiv{
     width:25%;
-    /*margin: auto;*/
+    !*margin: auto;*!
     margin-left: 10%;
 
 }
@@ -23,4 +19,4 @@
 svg{
     height: 400px;
     width: 350px;
-}
+}*/
