--- a/css/popup.css
+++ b/css/popup.css
@@ -2,6 +2,7 @@
     font-family: 'Segoe UI', sans-serif;
     /*box-shadow: 0 0 3px red;*/
 }
+/*
 
 .box {
     margin: 0 auto;
@@ -41,7 +42,7 @@
     visibility: visible;
     opacity: 20;
 }
-/*Pop up Horaire - page commune*/
+!*Pop up Horaire - page commune*!
 .popup {
     margin: 250px auto;
     padding: 20px;
@@ -52,18 +53,18 @@
     transition: all 5s ease-in-out;
     z-index: 999;
 }
-/*Titre dans le pop up - page commune*/
+!*Titre dans le pop up - page commune*!
 .popup h2 {
     margin-top: 0;
     color: #031f73;
     text-align: center;
 }
-/*Texte dans le pop up - page commune*/
+!*Texte dans le pop up - page commune*!
 .popup h3 {
     margin-top: 0;
     color: #031f73;
 }
-/*Croix pour fermer le pop up*/
+!*Croix pour fermer le pop up*!
 .popup .close {
     position: absolute;
     top: 20px;
@@ -74,7 +75,7 @@
     text-decoration: none;
     color: black;
 }
-/*effet Croix pour fermer le pop up*/
+!*effet Croix pour fermer le pop up*!
 .popup .close:hover {
     color: #af0606;
 }
@@ -90,4 +91,4 @@
     .popup{
         width: 70%;
     }
-}
+}*/
