Amélioration page d'acceuil

--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,10 @@ body {
     width: 15px;
 }
 
+.accordion-button{
+    color: #ffffff;
+}
+
 /*-------------------------------------------Footer----------------------------------------------*/
 .Toutfooter {
     display: flex;
