--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4595,7 +4595,7 @@ textarea.form-control-lg {
   font-size: 1rem;
   color: var(--bs-accordion-btn-color);
   text-align: left;
-  background-color: var(--bs-accordion-btn-bg);
+  background-color: #031f73;
   border: 0;
   border-radius: 0;
   overflow-anchor: none;
@@ -4609,7 +4609,7 @@ textarea.form-control-lg {
 .accordion-button:not(.collapsed) {
 /*  color: var(--bs-accordion-active-color);
   background-color: var(--bs-accordion-active-bg);*/
-  color: #202021;
+  color: #ffffff;
   background-color: #af0606;
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
