--- a/css/Erreur.css
+++ b/css/Erreur.css
@@ -1,6 +1,6 @@
 *{
     font-family: 'Segoe UI', serif;
-    box-shadow: 0 0 3px red;
+  /*  box-shadow: 0 0 3px red;*/
 }
 
 .erreur{
@@ -44,7 +44,6 @@
     justify-content: center;
     align-items: flex-end;
     min-height: 20vh;
-
 }
 
 
@@ -72,7 +71,7 @@
     fill: transparent;
     stroke-linecap: round;
     stroke-width: 8;
-    stroke: #282828;
+    stroke: #ffffff;
     transform: translate(5px, 5px);
 }
 #time .circle svg circle:nth-child(2) {
