--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,13 @@ body {
     margin: 0 auto;
     padding: 3rem 2rem;
 }
-
+.title {
+    font-size: 3.5rem;
+    color: #031f73;
+    margin-bottom: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+}
 /*Titre de la page*/
 .boite .title {
     font-size: 3.5rem;
