--- a/css/carousell.css
+++ b/css/carousell.css
@@ -1,5 +1,7 @@
 /* Import Google font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ruthie&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 
 * {
     margin: 0;
@@ -77,6 +79,7 @@
 .carouselauto.dragging .card {
     cursor: grab;
     user-select: none;
+    align-items: center;
 }
 
 .carouselauto :where(.card, .img) {
@@ -96,6 +99,7 @@
     border-radius: 8px;
     transition: all 0.5s ease-in-out;
     transform-style: preserve-3d;
+    align-items: center;
 }
 
 .carouselauto .card .img {
@@ -103,6 +107,7 @@
     height: 148px;
     width: 148px;
     border-radius: 50%;
+    align-items: center;
 }
 
 /*Contours image des élus*/
@@ -112,22 +117,26 @@
     border-radius: 50%;
     object-fit: cover;
     border: 4px solid #af0606;
+    align-content: center;
+
 }
 
 .carouselauto .card h2 {
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     /* margin: 30px 15px 5px;*/
-    text-align: left;
+
     margin-top: 25px;
-    margin-left: 25px;
+
     margin-right: 5px;
+    text-align: center;
+    align-items: center;
 
 }
 
 .carouselauto .card span {
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     text-align: center;
 }
 
@@ -145,14 +154,16 @@
     .wrapperauto .carouselauto {
         grid-auto-columns: 100%;
     }
+    .carouselauto .card h2 {
+        font-size: 2.5rem;
+    }
+    .carouselauto .card span {
+        font-size: 2rem;
+    }
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Ruthie&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
-* {
-    font-family: 'Segoe UI', sans-serif;
-    /*box-shadow: 0 0 3px red;*/
-}
+
+
 
 /*Container 3D*/
 .container-3d {
@@ -180,6 +191,10 @@
 .back {
     background-position: right;
     transform: rotateY(180deg); /*rotate this face*/
+}
+
+.front-content.img {
+    align-items: center;
 }
 
 /*Texte au dos des cartes - page commune*/
@@ -219,6 +234,14 @@ a {
 .front-content,
 .back-content {
     transform: translateZ(1px);
+    align-items: center;
+}
+
+.front-content,
+.back-content h2 {
+    text-align: center;
+
+
 }
 
 /*Front*/
