--- a/css/carousell.css
+++ b/css/carousell.css
@@ -1,4 +1,4 @@
-/* Import Google font - Poppins */
+/*!* Import Google font - Poppins *!
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Ruthie&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
@@ -7,8 +7,9 @@
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', sans-serif;
-}
+}*/
 
+/*
 .tout {
     display: flex;
     padding: 0 35px;
@@ -110,7 +111,7 @@
     align-items: center;
 }
 
-/*Contours image des élus*/
+!*Contours image des élus*!
 .card .img img {
     width: 140px;
     height: 140px;
@@ -124,7 +125,7 @@
 .carouselauto .card h2 {
     font-weight: 500;
     font-size: 1.3rem;
-    /* margin: 30px 15px 5px;*/
+    !* margin: 30px 15px 5px;*!
 
     margin-top: 25px;
 
@@ -165,24 +166,24 @@
 
 
 
-/*Container 3D*/
+!*Container 3D*!
 .container-3d {
-    /*Referencial for 3d Perspective*/
+    !*Referencial for 3d Perspective*!
     border: 0.5px solid #ffffff;
     border-radius: 10px;
 }
 
-/*Card*/
+!*Card*!
 
 .front,
 .back {
     text-align: center;
-    backface-visibility: hidden; /*hide backface*/
+    backface-visibility: hidden; !*hide backface*!
     transition: all 0s ease-in-out;
-    transform-style: preserve-3d; /*to allow 3d on images*/
+    transform-style: preserve-3d; !*to allow 3d on images*!
 }
 
-/*Face avant des cartes - page commune*/
+!*Face avant des cartes - page commune*!
 .front {
     background-position: left;
     color: white;
@@ -190,14 +191,14 @@
 
 .back {
     background-position: right;
-    transform: rotateY(180deg); /*rotate this face*/
+    transform: rotateY(180deg); !*rotate this face*!
 }
 
 .front-content.img {
     align-items: center;
 }
 
-/*Texte au dos des cartes - page commune*/
+!*Texte au dos des cartes - page commune*!
 .back-content {
     height: 100%;
     display: flex;
@@ -207,16 +208,11 @@
     color: white;
 }
 
-/*Texte en dessous de Nos contact - page commune*/
-a {
-    color: white;
-    cursor: pointer;
-    text-decoration: none;
-}
 
-/*Hover Transition*/
+
+!*Hover Transition*!
 .container-3d:hover .card {
-    transform: rotateY(180deg); /*rotate card when hover on container*/
+    transform: rotateY(180deg); !*rotate card when hover on container*!
 }
 
 .container-3d:hover .front {
@@ -244,14 +240,14 @@ a {
 
 }
 
-/*Front*/
+!*Front*!
 
 .front {
     position: absolute;
     border-radius: 10px;
-    backface-visibility: hidden; /*hide backface*/
+    backface-visibility: hidden; !*hide backface*!
     transition: all 0s ease-in-out;
-    transform-style: preserve-3d; /*to allow 3d on images*/
+    transform-style: preserve-3d; !*to allow 3d on images*!
     background-size: 300% 100%;
     display: flex;
     justify-content: center;
@@ -260,17 +256,18 @@ a {
 
 .back {
     position: absolute;
-    backface-visibility: hidden; /*hide backface*/
+    backface-visibility: hidden; !*hide backface*!
     transition: all 0s ease-in-out;
-    transform-style: preserve-3d; /*to allow 3d on images*/
+    transform-style: preserve-3d; !*to allow 3d on images*!
     background-size: 300% 100%;
     z-index: auto;
 }
 
-/*couleur de fond du texte - page commune*/
+!*couleur de fond du texte - page commune*!
 .accordion-body {
     background-color: beige;
 }
+*/
 
 
 
