--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ruthie&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 * {
     font-family: 'Segoe UI', sans-serif;
 
@@ -316,7 +319,10 @@ body {
     display: none; /* L'image est cachée initialement */
 }
 
-
+/*couleur de fond du texte - page commune*/
+.accordion-body {
+    background-color: beige;
+}
 /*Page Service en ligne*/
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
 
@@ -488,6 +494,18 @@ body {
     .card-style p{
 
     }
+   /* #agenda {
+        !*padding-left: 2em;*!
+        background-color: #f8d99b;
+        border-radius: 5px;
+        padding: 2rem;
+    }
+
+    #agenda .info p {
+        border-left: solid #af0606;
+        text-align: justify;
+        font-size: 2rem;
+    }*/
 }
 
 @media screen and (max-width: 576px) {
@@ -751,7 +769,7 @@ svg {
     width: 20%;
     height: 100%;
     color: #031f73;
-    -webkit-text-stroke: 1px #d9a87e; border-right: 2px solid #d9a87e;
+    -webkit-text-stroke: 1px #000000; border-right: 2px solid #af0606;
     overflow: hidden;
     animation: move 5s alternate ease-in-out infinite;
 }
@@ -767,5 +785,262 @@ svg {
 
 }
 .ecriture-petit-titre{
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
+
+
+.tout {
+    display: flex;
+    padding: 0 35px;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.wrapperauto {
+    max-width: 1100px;
+    width: 100%;
+    position: relative;
+}
+
+.wrapperauto i {
+    top: 50%;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    font-size: 1.25rem;
+    position: absolute;
+    text-align: center;
+    line-height: 50px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px white;
+    transform: translateY(-50%);
+    transition: transform 0.1s linear;
+}
+
+.wrapperauto i:active {
+    transform: translateY(-50%) scale(0.85);
+}
+
+.wrapperauto i:first-child {
+    left: -22px;
+}
+
+.wrapperauto i:last-child {
+    right: -22px;
+}
+
+.wrapperauto .carouselauto {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 3) - 12px);
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    gap: 16px;
+    border-radius: 8px;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+}
+
+.carouselauto::-webkit-scrollbar {
+    display: none;
+}
+
+.carouselauto.no-transition {
+    scroll-behavior: auto;
+}
+
+.carouselauto.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
+}
+
+.carouselauto.dragging .card {
+    cursor: grab;
+    user-select: none;
+    align-items: center;
+}
+
+.carouselauto :where(.card, .img) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carouselauto .card {
+    scroll-snap-align: start;
+    height: 342px;
+    list-style: none;
+    background: #031f73;
+    cursor: pointer;
+    padding-bottom: 15px;
+    flex-direction: column;
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+    transform-style: preserve-3d;
+    align-items: center;
+}
+
+.carouselauto .card .img {
+    background: white;
+    height: 148px;
+    width: 148px;
+    border-radius: 50%;
+    align-items: center;
+}
+
+/*Contours image des élus*/
+.card .img img {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #af0606;
+    align-content: center;
+
+}
+
+.carouselauto .card h2 {
+    font-weight: 500;
+    font-size: 1.3rem;
+    /* margin: 30px 15px 5px;*/
+
+    margin-top: 25px;
+
+    margin-right: 5px;
+    text-align: center;
+    align-items: center;
+
+}
+
+.carouselauto .card span {
+    color: white;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+.fa-angle-left {
+    z-index: 1
+}
+
+@media screen and (max-width: 900px) {
+    .wrapperauto .carouselauto {
+        grid-auto-columns: calc((100% / 2) - 9px);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .wrapperauto .carouselauto {
+        grid-auto-columns: 100%;
+    }
+    .carouselauto .card h2 {
+        font-size: 2.5rem;
+    }
+    .carouselauto .card span {
+        font-size: 2rem;
+    }
+}
+
+
+
+
+/*Container 3D*/
+.container-3d {
+
+    border: 0.5px solid #ffffff;
+    border-radius: 10px;
+}
+
+/*Card*/
+
+.front,
+.back {
+    text-align: center;
+    backface-visibility: hidden; /*hide backface*/
+    transition: all 0s ease-in-out;
+    transform-style: preserve-3d; /*to allow 3d on images*/
+}
+
+/*Face avant des cartes - page commune*/
+.front {
+    background-position: left;
+    color: white;
+}
+
+.back {
+    background-position: right;
+    transform: rotateY(180deg); /*rotate this face*/
+}
+
+.front-content.img {
+    align-items: center;
+}
+
+/*Texte au dos des cartes - page commune*/
+.back-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+
+
+/*Hover Transition*/
+.container-3d:hover .card {
+    transform: rotateY(180deg); /*rotate card when hover on container*/
+}
+
+.container-3d:hover .front {
+    background-position: right;
+}
+
+.container-3d:hover .back {
+    background-position: left;
+}
+
+.fab:hover {
+    transform: scale(1.2);
+}
+
+.front-content,
+.back-content {
+    transform: translateZ(1px);
+    align-items: center;
+}
+
+.front-content,
+.back-content h2 {
+    text-align: center;
+
+
+}
+
+/*Front*/
+
+.front {
+    position: absolute;
+    border-radius: 10px;
+    backface-visibility: hidden; /*hide backface*/
+    transition: all 0s ease-in-out;
+    transform-style: preserve-3d; /*to allow 3d on images*/
+    background-size: 300% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.back {
+    position: absolute;
+    backface-visibility: hidden; /*hide backface*/
+    transition: all 0s ease-in-out;
+    transform-style: preserve-3d; /*to allow 3d on images*/
+    background-size: 300% 100%;
+    z-index: auto;
+}
+
+
+
