--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 * {
     font-family: 'Segoe UI', sans-serif;
 
-   /* box-shadow: 0 0 3px red;*/
+  /*  box-shadow: 0 0 3px red;*/
 }
 
 body {
@@ -506,6 +506,16 @@ body {
         text-align: justify;
         font-size: 2rem;
     }*/
+    .accordion-body{
+        font-size: 2rem;
+    }
+    .accordion-button:not(.collapsed) {
+        font-size: 2rem;
+    }
+    .accordion-button{
+        font-size: 2rem;
+
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -660,30 +670,29 @@ svg {
     .cardtst {
         grid-template-columns: repeat(4, 1fr);
     }
-}
-
-@media screen and (max-width: 576px) {
-    .cardt{
-        margin:-50% 5% -50%;
-    }
-    /*Titre du texte dans les cards*/
     .cardt-content p {
+        color: white;
         font-size: 1.9rem;
+        margin-bottom: 10px;
+        text-transform: uppercase;
     }
     /*Texte dans les cards*/
     .cardt-content h3 {
-        font-size: 2.5rem;
+        color: #000000;
+        font-size: 3.6rem;
+        text-shadow: 2px 2px 20px #af0606;
     }
-    .accordion-body{
-        font-size: 2rem;
-    }
-    .accordion-button:not(.collapsed) {
-        font-size: 2rem;
-    }
-    .accordion-button{
-        font-size: 2rem;
+}
 
+@media screen and (max-width: 1800px) {
+    .cardt{
+        margin:-50% 5% -50%;
     }
+
+    /*Titre du texte dans les cards*/
+
+
+
 
 }
 
@@ -943,7 +952,6 @@ svg {
         font-size: 2rem;
     }
 }
-
 
 
 
