Amélioration des pages

--- a/css/style.css
+++ b/css/style.css
@@ -756,7 +756,7 @@ svg {
     width: 100%;
     text-align: center;
 }
-/*-------------------------------------------Popup Horaire ----------------------------------------------*/
+/*-------------------------------------------écriture nom page commune ----------------------------------------------*/
 
 .heading {
     position: relative;
@@ -799,7 +799,7 @@ svg {
     font-size: 2rem;
 }
 
-
+/*-----------------------------------Caroucelle elus------------------------------------*/
 .tout {
     display: flex;
     padding: 0 35px;
