--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ body {
 /*Agenda*/
 #agenda {
     padding-left: 2em;
-    background-color: #f8d99b;
+    background-color: #fff1d7;
     border-radius: 5px;
 }
 
